--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Portfolio — Redesign</title>
+    <title>Patrick Dutra - Desenvolvedor fullstack</title>
     <link rel="icon" type="image/svg+xml" href="/sparkles-gradient.svg" />
   </head>
   <body>
