--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Patrick Dutra - Desenvolvedor fullstack</title>
     <link rel="icon" type="image/svg+xml" href="/sparkles-gradient.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#8b5cf6" />
   </head>
   <body>
     <div id="root"></div>
